# ghost-sweep

./: .env.example  .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  go.mod  index.html  styles.css
.githooks/: commit-msg  pre-push  prepare-commit-msg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .flake8  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  001_initial_uuid_schema.py  002_employer_claim_constraints.py  003_audit_remediation_constraints.py
backend/app/: __init__.py  config.py  database.py  db_errors.py  dependencies.py  exceptions.py  main.py  redis_client.py  schemas.py
backend/app/api/v1/: auth.py  companies.py  employer_claims.py  job_postings.py  moderation.py  reports.py
backend/app/models/: __init__.py  audit_log.py  base.py  company.py  employer_claim.py  employer_response.py  enums.py  evidence_file.py  job_posting.py  pg_enums.py  report.py  score_snapshot.py  user.py  vote.py
backend/app/routers/: auth.py  companies.py  health.py  job_postings.py  reports.py
backend/app/schemas/: auth.py  company.py  health.py  job_posting.py  report.py
backend/app/security/: __init__.py  password_policy.py  passwords.py  tokens.py
backend/app/services/: audit.py  auth.py  companies.py  employer_claims.py  employer_responses.py  job_postings.py  job_url_validation.py  moderation.py  rate_limit.py  refresh_tokens.py  report_eligibility.py  reports.py  scoring.py  scoring_pipeline.py  sheet_import.py  user_identity.py  votes.py
backend/scripts/: seed_demo_data.py
backend/tests/: __init__.py  conftest.py  test_audit_remediation.py  test_auth.py  test_auth_refresh.py  test_companies.py  test_config.py  test_db_errors.py  test_dependencies.py  test_employer_claims.py  test_employer_responses.py  test_health.py  test_job_postings.py  test_job_url_validation.py  test_main.py  test_migrations.py  test_moderation.py  test_refresh_tokens.py  test_reports.py  test_schemas.py  test_scoring.py  test_security.py  test_sheet_import.py  test_vote_model.py  test_votes.py
backend/tests/fixtures/: sheet_import_sample.csv
docs/: api.md  architecture.md  audit-remediation-plan.md  auth-api.md  contributor-onboarding.md  database-migrations.md  deep-audit-remediation-v0.1.2.md  dependency-audit.md  domain-api.md  e2e-validation-summary-v0.1.1.md  employer-api.md  free-public-launch-plan.md  google-form-intake-spec.md  hosting-readiness-spike.md  implementation-readiness-report.md  implementation-status.md  labels.md  legal-risk.md  linkedin-launch-post-v0.1.1.md  local-docker-validation.md  moderation-api-contract-review.md  (+17 more)
(+78 files in other folders)
