[project]
name = "ghost-sweep-backend"
version = "0.1.0"
description = "Job Integrity Database API"
requires-python = "==3.11.*"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
    "fastapi==0.138.2",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "PyJWT==2.13.0",
    "python-multipart==0.0.31",
    "redis==5.2.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.8.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "pip-audit==2.7.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "types-redis==4.6.0.20241004",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/versions/.*\\.py$"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
